--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "build": "node bot.js"
   },
   "keywords": [],
   "author": "",
