Removed update trigger

--- a/.github/workflows/Build and containerize.yml
+++ b/.github/workflows/Build and containerize.yml
@@ -37,12 +37,12 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  triggerUpdate:
-    name: Trigger Update 🔄
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Call Webhook
-        uses: distributhor/workflow-webhook@v3
-        with:
-          webhook_url: ${{ secrets.WEBHOOK_URL }}
+  # triggerUpdate:
+  #   name: Trigger Update 🔄
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Call Webhook
+  #       uses: distributhor/workflow-webhook@v3
+  #       with:
+  #         webhook_url: ${{ secrets.WEBHOOK_URL }}
