--- a/.github/workflows/Build and containerize.yml
+++ b/.github/workflows/Build and containerize.yml
@@ -27,10 +27,12 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push 🏗️
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64
+          platforms:
+            - linux/amd64
+            - linux/arm64
           file: ./Dockerfile
           push: true
           tags: ghcr.io/pollak-projects/pollakecho-bot/app:latest
