Applied Matrix Platform build

--- a/.github/workflows/Build and containerize.yml
+++ b/.github/workflows/Build and containerize.yml
@@ -8,13 +8,19 @@ jobs:
   build:
     name: Build Docker Image 🏗️
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+          - linux/amd64
+          - linux/arm64
 
     steps:
       - name: Check out repository code 🛎️
         uses: actions/checkout@v4
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx 🚀
         uses: docker/setup-buildx-action@v3
@@ -27,12 +33,11 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push 🏗️
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: .
-          platforms:
-            - linux/amd64
-            - linux/arm64
+          platforms: ${{ matrix.platform }}
+          labels: ${{ steps.meta.outputs.labels }}
           file: ./Dockerfile
           push: true
           tags: ghcr.io/pollak-projects/pollakecho-bot/app:latest
